<resources>
    <string name="app_name">POSLite</string>
    <string name="app_name_alt">Itex Integrated Services</string>
    <string name="app_login_txt">LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_terminal_id">Terminal ID</string>
    <string name="key_terminal_id">terminal_id</string>
    <string name="key_ip_address">ip_address</string>
    <string name="pref_title_ip_address">IP Address</string>
    <string name="key_pref_port">key_port</string>
    <string name="key_pref_port_type">key_port_type</string>
    <string name="pref_title_port">Port</string>
    <string name="key_pref_ip_address">ip_address</string>
    <string name="key_host_type">key_host_type</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_summary">Summary</string>
    <string name="phone_number">Phone number</string>
    <string name="amount">Amount</string>
    <string name="action_select_provider">Select airtime provider</string>
    <string name="state_transaction_approved">TRANSACTION APPROVED</string>
    <string name="state_transaction_declined">TRANSACTION_DECLINED</string>
    <string name="key_platform">key_platform</string>
    <string name="naira_string">\u20A6 %s</string>
    <string name="key_payvice_username">key_payvice_login_username</string>
    <string name="key_payvice_wallet_id">key_payvice_wallet_id</string>
    <string name="key_payvice_wallet_password">key_payvice_wallet_password</string>
    <string name="KEY_LAST_LOCATION">key_last_location</string>
    <string name="key_is_user_logged_in">is_user_logged_in</string>
    <string name="key_payvice_wallet_pin">key_payvice_wallet_pin</string>
    <string name="tickets">Tickets</string>
    <string name="key_is_terminal_prepped">is_terminal_prepped</string>

    <string name="tams_url">http://197.253.19.75/ctms/eftpos/devinterface/transactionadvice.php</string>
    <string name="recover_password_url">http://197.253.19.75/ctms/eftpos/devinterface/recovery.php</string>
    <string name="tams_logout_action">TAMS_LOGOUT</string>
    <string name="tams_login_action">TAMS_LOGIN</string>
    <string name="tams_init_action">INIT</string>
    <string name="tams_webapi_action">TAMS_WEBAPI</string>

    <string name="tams_default_terminal_id">203301ZA</string>


</resources>
